Fix scrollbar in patterns bar for browsers that have scrollbars

--- a/frontend/src/app/editor/assembly/assembly.component.scss
+++ b/frontend/src/app/editor/assembly/assembly.component.scss
@@ -40,5 +40,6 @@
 
   app-patterns-bar {
     border-top: 4px solid $main-background;
+    flex-grow: 1;
   }
 }
