--- a/frontend/src/app/editor/patterns/patterns.component.scss
+++ b/frontend/src/app/editor/patterns/patterns.component.scss
@@ -112,6 +112,7 @@
 
   app-patterns-bar {
     border-top: 4px solid $main-background;
+    flex-grow: 1;
   }
 }
 
